# Task-Service

./: .gitignore  docker-compose.yaml
bot/: pyproject.toml
bot/src/: bot.py
bot/src/handlers/: routers.py
bot/src/settings/: api_config.py  config.py  dispatcher.py
task_api/: pyproject.toml
task_api/src/: app.py
task_api/src/controllers/: task_controller.py
task_api/src/database/: db.py  manager.py  models.py  schemas.py
task_api/src/logic/: task_logic.py
task_api/src/settings/: config.py  routers.py
