[tool.poetry]
name = "task-bot"
version = "0.1.0"
description = ""
authors = ["danil <kotikov.lil@bkl.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram-dialog = "^2.1.0"
aiogram = "^3.11.0"
aiohttp = "^3.10.3"
pydantic-settings = "^2.4.0"
pydantic = "^2.8.2"
redis = "^5.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
